--- a/recipeshare-client/package.json
+++ b/recipeshare-client/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "prepare": "chmod +x node_modules/.bin/vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -19,5 +20,3 @@
     "vite": "^5.4.3"
   }
 }
-
-
