backend is connected

--- a/recipeshare-server/env.example
+++ b/recipeshare-server/env.example
@@ -17,6 +17,12 @@ CORS_ORIGIN=http://localhost:5173
 # Will automatically use RENDER_EXTERNAL_URL on Render if not set.
 PUBLIC_URL=http://localhost:5000
 
+# Cloudinary configuration (optional - for cloud image storage)
+# Get these from https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
 # Optional overrides (defaults exist). If using a Render disk, set UPLOAD_DIR to the mounted path.
 # UPLOAD_DIR=
 # DATA_FILE=
